[package]
name = "erspan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.21"
libc = "*"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage"] }
nix = { version = "0.27", default-features = false, features = ["net", "user"] }

[build-dependencies]
libbpf-cargo = "0.21"
