[package]
name = "funcprobe"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0 OR BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazesym = "=0.2.0-alpha.8"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage"] }
anyhow = "1.0"
libbpf-rs = "0.21"
libc = "0.2"
object = "0.25"
#ctrlc = "3.1"

[build-dependencies]
libbpf-cargo = "0.21"
