[package]
name = "forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bytes = "1.6"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
log4rs = { version = "1.3", default-features = false, features = ["gzip", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "background_rotation"] }
#env_logger = "0.9.0"
#systemd-journal-logger = "2.1.1"
uuid = { version = "1.8", features = ["v4"]}
