[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = { version = "0.1", features = ["lb"] }
pingora-core = { version = "0.1" }
async-trait = "0.1"
structopt = "0.3"
#clap = { version = "4" , default-features = false, features = ["std", "derive", "help", "usage"] }
