[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive"] }
either = "1.15.0"
futures = "0.3.31"
libp2p = { version = "0.55.0", features = ["noise", "dns", "kad", "mdns", "macros", "pnet", "identify", "gossipsub", "quic", "rsa", "tcp", "tokio", "yamux"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
