[package]
name = "topology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
netdev = "0.24"
ovsdb = "0"
pnet = { version = "0.34" }
serde = { version = "1.0", features = ["derive"] }                                                                                                              
serde_json = "1.0"
