[package]
name = "topology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4", features = ["derive"] }
#pnet = { version = "0.34" , features = ["pcap"] }
#pnet = { version = "0.34" , features = ["netmap"] }
pnet = { version = "0.35" }
serde = { version = "1.0", features = ["derive"] }                                                                                                              
serde_json = "1.0"
rustix = { version = "0.38", features = ["system", "net"] }
log = "0.4.21"
env_logger = "0.11.3"
