[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
mobc-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
mobc = "0.8"
chrono = { version = "0.4", features = ["serde"] }
#axum = "0.7"
warp = "0.3"
thiserror = "1"
common = { version = "0.1.0", path = "../common"}
