[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
yew = "0.21"
yew-router = "0.18"
wasm-bindgen = "0.2"
common = { version = "0.1.0", path = "../common"}
