[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
#yew = { version = "0.21", features = ["csr"] }
#yew-router = "0.18"
dioxus = { version = "0.6", features = ["web", "router"] }
wasm-bindgen = "0.2"
common = { version = "0.1.0", path = "../common"}
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
log = "0.4.21"
dioxus-logger = "0.6.1"
tracing = "0.1.40"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
futures = "0.3.30"
